--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/services-1.jpg" alt="...">
+                <img src="assets/img/services-4.jpg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">Social Media Optimization</a></h5>
+                <h5 class="card-title"><a href="">Analytics Support</a></h5>
                 <p class="card-text">Social media optimization (SMO) is needed to ensure your brand accounts align with your business and it's goals </p>
                 <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Learn More</a></div>
               </div>
