--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Analytics Support</a></h5>
-                <p class="card-text">Finding the right audience is an important step to making better decisions moving forward. Business analytics gathers data from popular hubs like Facebook and Instagram, and this data is used to create a demographic of a brand’s ideal customers. In turn, this profile determines what types of features your customers want or need from specific products. So it is a powerful tool while deciding about how to improve current products and services. </p>
+                <p class="card-text">Finding the right audience is an important step to making better decisions moving forward. Business analytics gathers data from popular hubs like Facebook and Instagram, and this data is used to create a demographic of a brand’s ideal customers. <br> In turn, this profile determines what types of features your customers want or need from specific products. So it is a powerful tool while deciding about how to improve current products and services. </p>
                 <div class="read-more"><a href="#"><i class=""></i></a></div>
               </div>
             </div>
