--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <div class="section-title">
           <h2 data-aos="fade-in">Services</h2>
-          <p data-aos="fade-in">Brandnetic Technologies offer a wide variety of services that will help you build your brand from the ground up.</p>
+          <p data-aos="fade-in">Brandnetic Technologies offer a wide variety of services that will help you navigate through the digital world.</p>
         </div>
 
         <div class="row">
