--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Brandnetic Technologies</title>
+  <title>Digital Marketing</title>
   <meta content="Digital Marketing" name="description">
   <meta content="Digital Marketing, Branding, SEO Optimization, Social Media Optimization" name="keywords">
 
