--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
   <section id="hero">
 
     <div class="container">
-      <div class="row d-flex align-items-center"">
+      <div class="row d-flex align-items-center">
       <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
         <h1>Your new digital experience with Brandnetic</h1>
-        <h2>Helping people build brands through technology</h2>
+        <h2>Helping people build brands through digital marketing</h2>
         <a href="#services" class="btn-get-started scrollto">Get Started</a>
       </div>
       <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
