--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/services-3.jpg" alt="...">
+                <img src="assets/img/webpic1.jpg" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Social Media Ad Optimization</a></h5>
