--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/services-4.jpg" alt="...">
+                <img src="assets/img/webpic8.jpg" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Analytics Support</a></h5>
-                <p class="card-text">Finding the right audience is an important step to making better decisions moving forward. Business analytics gathers data from popular hubs like Facebook and Instagram, and this data is used to create a demographic of a brand’s ideal customers. <br> <br> In turn, this profile determines what types of features your customers want or need from specific products. So it is a powerful tool while deciding about how to improve current products and services. </p>
+                <p class="card-text">Finding the right audience is an important step to making better decisions moving forward. Business analytics gathers data from popular hubs like Facebook and Instagram, and this data is used to create a demographic of a brand’s ideal customers. <br> <br> In turn, your profile will determine what types of features your customers want or need from specific products. So it is a powerful tool while deciding about how to improve current products and services. </p>
                 <div class="read-more"><a href="#"><i class=""></i></a></div>
               </div>
             </div>
@@ -160,12 +160,12 @@
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-left">
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/services-2.jpg" alt="...">
+                <img src="assets/img/webpic4.jpg" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Web Development</a></h5>
-                <p class="card-text">Your brand is the story that connects people to the products and services you offer. Having a well built website that matches your brand narrative, your brand will feel even more engaging and authenic.</p>
-                <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Learn More</a></div>
+                <p class="card-text">47% of consumers will visit a business’s website before making a purchase, regardless of the size of the business. 30% of these people decide to buy from that business based on the fact that they prefer their website. <br> <br> Make sure you are in the running by completing small business web development today. By doing so, you will benefit greatly by building your business credibility, along with several other beneficial aspects of having a website.</p>
+                <div class="read-more"><a href="#"><i class=""></i> </a></div>
               </div>
             </div>
 
@@ -173,24 +173,24 @@
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/webpic1.jpg" alt="...">
+                <img src="assets/img/webpic7.jpg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">Social Media Ad Optimization</a></h5>
-                <p class="card-text">Ad optimization refers to the process of creating ads that are relevant to users by using different techniques.</p>
-                <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Learn More</a></div>
+                <h5 class="card-title"><a href="">Social Media Optimization</a></h5>
+                <p class="card-text">Social media optimization is the process of improving your social posts (or your whole social media strategy) to achieve better results: faster follower growth, higher levels of engagement, more clicks or conversions, etc. <br> <br> Overall it improves your brand’s visibility on social media platforms.</p>
+                <div class="read-more"><a href="#"><i class=""></i></a></div>
               </div>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-left">
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/services-4.jpg" alt="...">
+                <img src="assets/img/webpic11.jpg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">Analytics Support</a></h5>
-                <p class="card-text">Providing analytic support is the ability to gather and find meaning in data gathered from social media and websites channels to support your business and measure the performace of actions based on those decisions.</p>
-                <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Learn More</a></div>
+                <h5 class="card-title"><a href="">Search Engine Optimization</a></h5>
+                <p class="card-text">On-page SEO is about building content to improve your rankings. This comes down to incorporating keywords into your pages and content, writing high-quality content regularly, making sure your metatags and titles are keyword-rich and well-written. <br> <br> Search engines identifies important keywords and uses these factors to determine where you rank. </p>
+                <div class="read-more"><a href="#"><i class=""></i></a></div>
               </div>
             </div>
           </div>
@@ -205,7 +205,7 @@
 
         <div class="section-title">
           <h2 data-aos="fade-in">Features</h2>
-          <p data-aos="fade-in">The digital experience isn't an IT-driven initiative; it's a customer-needs driven initiative. There's a huge difference between simply using digital technology and actually leveraging it to improve customer experiences and better address customer needs.</p>
+          <p data-aos="fade-in">The Brandnetic experience isn't an IT-driven initiative; it's a customer-needs driven initiative. There's a huge difference between simply using digital technology and actually leveraging it to improve customer experiences and better address customer needs.</p>
         </div>
 
         <div class="row content">
@@ -213,7 +213,7 @@
             <img src="assets/img/brandtest.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left">
-            <h3>Having a stronger Voice</h3>
+            <h3>Having a strong digital marketing presence</h3>
             <p class="fst-italic">
               A strong social media and web presence is worth more to your brand than just likes or shares you accumulate.
 
@@ -363,37 +363,8 @@
         </div>
 
         <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#090347; clear:center; font:14px Helvetica,Arial,sans-serif;  width:600px;}
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="https://brandnetictechnologies.us13.list-manage.com/subscribe/post?u=a465b95c54aeef72d9aee9fbe&amp;id=fdfc6e55a9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<h2>Subscribe</h2>
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-	<div id="mce-responses" class="clear foot">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a465b95c54aeef72d9aee9fbe_fdfc6e55a9" tabindex="-1" value=""></div>
-        <div class="optionalParent">
-            <div class="clear foot">
-                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-                <!-- <p class="brandingLogo"><a href="http://eepurl.com/h5RJvj" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p> -->
-            </div>
-        </div>
-    </div>
-</form>
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
+
 <!--End mc_embed_signup-->
 
         <div class="social-links">
