--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2 data-aos="fade-in">Features</h2>
+          <h2 data-aos="fade-in">The Brandnetic Experience</h2>
           <p data-aos="fade-in">The Brandnetic experience isn't an IT-driven initiative; it's a customer-needs driven initiative. There's a huge difference between simply using digital technology and actually leveraging it to improve customer experiences and better address customer needs.</p>
         </div>
 
